floating window: Change grid values